Modal one problem solved

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ font-family: 'Lato', sans-serif;
                  </button>
 
                  <dialog id="my_modal_1" class="modal">
-                    <form method="dialog" class="modal-box w-[600px] h-[600]">
+                    <form method="dialog" class="modal-box w-[600px] h-[600px]">
                         <div>
                             <figure class="px-10 pt-10">
                                 <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
