background image position problem solve

--- a/index.html
+++ b/index.html
@@ -221,111 +221,111 @@ font-family: 'Lato', sans-serif;
 <main>
 <!-- ------------date--------- -->
 <section class="container mx-auto md:mt-20 lg:mt-40">
-    <div class="flex flex-col lg:flex-row justify-between gap-8 lg:gap-0">
-        <div class="text-black text-center mx-4 md:mx-0 lg:text-left space-y-5 leading-4">
-            <h2 class="text-4xl font-extrabold">Why Choose Us</h2>
-            <p class="text-lg font-medium ">Contrary to popular belief, is not simply random text. It has roots
-                in a
-                piece of classical <br> Latin
-                literature from 45 BC, making it over 2000 years old.</p>
+<div class="flex flex-col lg:flex-row justify-between gap-8 lg:gap-0">
+<div class="text-black text-center mx-4 md:mx-0 lg:text-left space-y-5 leading-4">
+    <h2 class="text-4xl font-extrabold">Why Choose Us</h2>
+    <p class="text-lg font-medium ">Contrary to popular belief, is not simply random text. It has roots
+        in a
+        piece of classical <br> Latin
+        literature from 45 BC, making it over 2000 years old.</p>
+</div>
+<!-- countdown -->
+<div class="mx-auto lg:mx-0">
+    <div class="grid grid-flow-col gap-2 text-center auto-cols-max">
+        <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+                <span style="--value:29;"></span>
+            </span>
+            Days
         </div>
-        <!-- countdown -->
-        <div class="mx-auto lg:mx-0">
-            <div class="grid grid-flow-col gap-2 text-center auto-cols-max">
-                <div class="flex flex-col">
-                    <span class="countdown font-mono text-5xl">
-                        <span style="--value:29;"></span>
-                    </span>
-                    Days
-                </div>
-                <div class="pt-3">
-                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown font-mono text-5xl">
-                        <span style="--value:15;"></span>
-                    </span>
-                    Hours
-                </div>
-                <div class="pt-3">
-                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown font-mono text-5xl">
-                        <span style="--value:25;"></span>
-                    </span>
-                    Min
-                </div>
-                <div class="pt-3">
-                    <i class="fa-solid fa-ellipsis-vertical"></i>
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown font-mono text-5xl">
-                        <span style="--value:08;"></span>
-                    </span>
-                    Sec
-                </div>
-            </div>
+        <div class="pt-3">
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+        </div>
+        <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+                <span style="--value:15;"></span>
+            </span>
+            Hours
+        </div>
+        <div class="pt-3">
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+        </div>
+        <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+                <span style="--value:25;"></span>
+            </span>
+            Min
+        </div>
+        <div class="pt-3">
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+        </div>
+        <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl">
+                <span style="--value:08;"></span>
+            </span>
+            Sec
         </div>
     </div>
+</div>
+</div>
 </section>
     <!-- ______card container__________ -->
 
     <section class="container mx-auto">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-10">
             <!-- card-1 -->
-            <div class="card bg-base-100 border-gray-100 border border-gray-bg rounded-lg">
-                <figure class="px-10 pt-10">
-                  <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title font-bold text-xl">12.90$ - 18.85$</h2>
-                    <div class="h-0.5 w-36 bg-black">
-          
-                    </div>
-                    <p>Apples</p>
-                    <span>
-                      <i class="fa-solid fa-star" style="color: #f85559;"></i>
-                      <i class="fa-solid fa-star" style="color: #f85559;"></i>
-                      <i class="fa-solid fa-star" style="color: #f85559;"></i>
-                      <i class="fa-solid fa-star-half-stroke" style="color: #f85559;"></i>
-                      <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
-                    </span>
-                 <button class="uppercase bg-none text-main-color" onclick="my_modal_1.showModal()">
-                    <p class="text-nav-primary font-medium text-lg">Details</p>
-                 </button>
+<div class="card bg-base-100 border-gray-100 border border-gray-bg rounded-lg">
+<figure class="px-10 pt-10">
+    <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
+</figure>
+<div class="card-body items-center text-center">
+    <h2 class="card-title font-bold text-xl">12.90$ - 18.85$</h2>
+    <div class="h-0.5 w-36 bg-black">
 
-                 <dialog id="my_modal_1" class="modal">
-                    <form method="dialog" class="modal-box w-[600px] h-[600px]">
-                        <div>
-                            <figure class="px-10 pt-10">
-                                <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
-                              </figure>
-                              <div class="card-body items-center text-center ">
-                                <h2 class="card-title mt-2">Apples</h2>
-                                <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                  
-                            </div>
-                            <p>Apples</p>
-                                <span>
-                                  <i class="fa-solid fa-star" style="color: #f85559;"></i>
-                                  <i class="fa-solid fa-star" style="color: #f85559;"></i>
-                                  <i class="fa-solid fa-star-half-stroke" style="color: #f85559;"></i>
-                                  <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
-                                  <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
-                                </span>
-                        </div>
-                      <!-- <h3 class="font-bold text-lg">Hello!</h3>
-                      <p class="py-4">Press ESC key or click the button below to close</p> -->
-                      <div class="modal-action flex justify-center">
-                        <!-- if there is a button in form, it will close the modal -->
-                        <button class="btn text-main-color border-main-color bg-white">Close</button>
-                        <button class="btn bg-main-color text-white">Buy</button>
-                      </div>
-                    </form>
-                  </dialog>
-                </div>
-              </div>
+    </div>
+    <p>Apples</p>
+    <span>
+        <i class="fa-solid fa-star" style="color: #f85559;"></i>
+        <i class="fa-solid fa-star" style="color: #f85559;"></i>
+        <i class="fa-solid fa-star" style="color: #f85559;"></i>
+        <i class="fa-solid fa-star-half-stroke" style="color: #f85559;"></i>
+        <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
+    </span>
+    <button class="uppercase bg-none text-main-color" onclick="my_modal_1.showModal()">
+    <p class="text-nav-primary font-medium text-lg">Details</p>
+    </button>
+
+    <dialog id="my_modal_1" class="modal">
+    <form method="dialog" class="modal-box w-[600px] h-[600px]">
+    <div>
+        <figure class="px-10 pt-10">
+            <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center ">
+            <h2 class="card-title mt-2">Apples</h2>
+            <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+
+        </div>
+        <p>Apples</p>
+            <span>
+                <i class="fa-solid fa-star" style="color: #f85559;"></i>
+                <i class="fa-solid fa-star" style="color: #f85559;"></i>
+                <i class="fa-solid fa-star-half-stroke" style="color: #f85559;"></i>
+                <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
+                <i class="fa-solid fa-star" style="color: #fbc0ab;"></i>
+            </span>
+</div>
+    <!-- <h3 class="font-bold text-lg">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p> -->
+    <div class="modal-action flex justify-center">
+    <!-- if there is a button in form, it will close the modal -->
+    <button class="btn text-main-color border-main-color bg-white">Close</button>
+    <button class="btn bg-main-color text-white">Buy</button>
+    </div>
+</form>
+</dialog>
+</div>
+</div>
  <!-- card-2 -->
               <div class="card bg-base-100 border-gray-100 border border-gray-bg rounded-lg">
                 <figure class="px-10 pt-10">
@@ -495,7 +495,7 @@ font-family: 'Lato', sans-serif;
 
 <section class="container mx-auto">
     <!-- meet the team -->
-    <section class="container mx-auto md:my-10 rounded-lg w-11/12 md:w-full  md:gap-10 bg-[url('./images/banner1.png')] bg-cover">
+    <section class="container mx-auto md:my-10 rounded-lg w-11/12 md:w-full  md:gap-10 bg-[url('./images/banner1.png')] " style="background-position: center;background-size: cover;">
         <div class="hero min-h-screen bg-hero-bg">
             <div class="hero-overlay rounded-lg bg-opacity-60"></div>
             <div class="w-full md:w-8/12 text-center text-neutral-content max-2xl:">
@@ -647,12 +647,12 @@ font-family: 'Lato', sans-serif;
 
 <!-- Why Chose Us Part -->
 <section class="container mx-auto my-10">
-<div class="text-black-bg text-center mx-4 space-y-4 leading-4">
-<h2 class="text-4xl font-extrabold">Why Choose Us</h2>
-<p class="text-lg font-medium ">Contrary to popular belief, is not simply random text. It has roots in a
-piece of classical <br> Latin
-literature from 45 BC, making it over 2000 years old.</p>
-</div>
+    <div class="text-black-bg text-center mx-4 space-y-4 leading-4">
+    <h2 class="text-4xl font-extrabold">Why Choose Us</h2>
+    <p class="text-lg font-medium ">Contrary to popular belief, is not simply random text. It has roots in a
+    piece of classical <br> Latin
+    literature from 45 BC, making it over 2000 years old.</p>
+    </div>
 <!-- grid -->
 <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 mt-10 ">
 <!-- no-1 -->
