--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ font-family: 'Lato', sans-serif;
 </div>
 </div>
 
-<div class="navbar-start md:hidden">
+<div class="navbar-start lg:hidden">
 <div class="dropdown pr-2">
 <label tabindex="1" class="btn btn-ghost btn-circle">
 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
@@ -296,7 +296,7 @@ font-family: 'Lato', sans-serif;
     </button>
 
     <dialog id="my_modal_1" class="modal">
-    <form method="dialog" class="modal-box w-[600px] h-[600px]">
+    <form method="dialog" class="modal-box max-w-[600px] max-h-[600px]">
     <div>
         <figure class="px-10 pt-10">
             <img class="w-32 h-32"  src="./images/fruit6.png" alt="" class="rounded-xl" />
