remove fix value with % in food item section for responsive

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ font-family: 'Lato', sans-serif;
 
 
     <!-- food types -->
-    <div class="absolute left-[170px] top-[575px] h-auto w-9/12  py-5 z-20  shadow-lg rounded-lg hidden lg:block bg-white shadow-gray-400">
+    <div class="absolute left-[12.5%] top-[575px] h-auto w-9/12  py-5 z-20  shadow-lg rounded-lg hidden lg:block bg-white shadow-gray-400">
 
         <div class="flex justify-evenly items-center">
             <div class="flex flex-col text-center">
@@ -457,14 +457,14 @@ font-family: 'Lato', sans-serif;
          </button>
 
          <dialog id="my_modal_4" class="modal">
-            <form method="dialog" class="modal-box">
+            <form method="dialog" class="modal-box max-w-[600px] max-h-[600px]">
                 <div>
                     <figure class="px-10 pt-10">
                         <img class="w-32 h-32"  src="./images/fruit9.png" alt="" class="rounded-xl" />
                       </figure>
                       
                         <div class="card-body items-center text-center ">
-                            <h2 class="card-title mt-2">Red Dragon</h2>
+                            <h2 class="card-title mt-2">Banana</h2>
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               
                         </div>
