--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ font-family: 'Lato', sans-serif;
             </div>
             <div class="flex flex-col text-center">
                 <img src="./images/fruit3.png" alt="">
-                <p>Apple</p>
+                <p>Mango</p>
             </div>
             <div class="flex flex-col text-center">
                 <img src="./images/fruit4.png" alt="">
