some padding added

--- a/index.html
+++ b/index.html
@@ -495,20 +495,20 @@ font-family: 'Lato', sans-serif;
 
 <section class="container mx-auto">
     <!-- meet the team -->
-    <section class="container mx-auto md:my-10 rounded-lg w-11/12 md:w-full  md:gap-10 bg-[url('./images/banner1.png')] " style="background-position: center;background-size: cover;">
+    <section class="container mx-auto  md:my-10 rounded-lg w-11/12 md:w-full  md:gap-10 bg-[url('./images/banner1.png')] " style="background-position: center;background-size: cover;">
         <div class="hero min-h-screen bg-hero-bg">
             <div class="hero-overlay rounded-lg bg-opacity-60"></div>
             <div class="w-full md:w-8/12 text-center text-neutral-content max-2xl:">
                 <div class="max-w-md mx-auto text-white">
-                    <h1 class="mb-5 text-4xl font-bold">Meet the team section</h1>
-                    <p class="mb-10 text-lg">Contrary to popular belief, is not simply random text. It has roots in
+                    <h1 class="mb-5 text-3xl md:tex-4xl font-bold py-4 md:py-0 ">Meet the team section</h1>
+                    <p class="mb-10 text-lg px-2 md:px-0">Contrary to popular belief, is not simply random text. It has roots in
                         a
                         piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     </div>
 <!-- ------------------- -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 ">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  ">
             <!-- one -->
-            <div class="">
+            <div class="my-3 md:my-0">
                 <div class="flex justify-center mb-4">
                     <img src="./images/member1.png" alt="">
                 </div>
@@ -522,9 +522,9 @@ font-family: 'Lato', sans-serif;
                     <a class="link link-hover"><i class="fa-brands fa-youtube"
                             style="color: #F85559;"></i></i></a>
                 </span>
-            </div>
+            </div >
             <!-- two -->
-            <div class="">
+            <div class="my-3 md:my-0">
                 <div class="flex justify-center mb-4">
                     <img src="./images/member2.png" alt="">
                 </div>
@@ -540,7 +540,7 @@ font-family: 'Lato', sans-serif;
                 </span>
             </div>
             <!-- three -->
-            <div class="">
+            <div class="my-3 md:my-0">
                 <div class="flex justify-center mb-4">
                     <img src="./images/member3.png" alt="">
                 </div>
@@ -556,7 +556,7 @@ font-family: 'Lato', sans-serif;
                 </span>
             </div>
             <!-- four -->
-            <div class="">
+            <div class="my-3 md:my-0">
                 <div class="flex justify-center mb-4">
                     <img src="./images/member4.png" alt="">
                 </div>
